# rusty-mvc

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
migrations/2024-06-14-035656_users/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/config/: sqlite.rs
src/controller/: user_controller.rs
src/entity/: user_entity.rs
src/exception/: app_error.rs  mod.rs
src/model/: common_model.rs  mod.rs  user_model.rs
src/repository/: user_repository.rs
src/service/: user_service.rs
src/utils/: common.rs
